fix all styles and html

--- a/assignments/resume-bootstrap/resume.css
+++ b/assignments/resume-bootstrap/resume.css
@@ -11,19 +11,24 @@ body {
     border-bottom: 1px solid darkslategray;
     margin: 0px auto;
     overflow: hidden;
-}
-
-#headerleft {
     box-sizing: border-box;
 }
 
-#headerleft h1 {
+.header h1 {
     display: inline;
+    font-size: 3.5em;
+    margin: 15px 0px 2px 5px;
+    font-weight: bold;
+    color: black;
+    font-family: initial;
 }
 
-#headerleft p {
+.header p {
     padding-left: 25px;
     font-family: initial;
+    font-size: x-large;
+    color: teal;
+    margin: 2px 0px 15px 25px;
 }
 
 #headerdot {
@@ -35,14 +40,10 @@ body {
     top: 30px;
 }
 
-#headermiddel {
+.header img {
     display: inline-block;
     padding-left: 0px;
     padding-right: 0px;
-    padding-top: 15px;
-}
-
-#headermiddel img {
     border-radius: 50%;
     margin-top: 5px;
     height: 170px;
@@ -52,24 +53,27 @@ body {
     box-sizing: content-box;
 }
 
-#headerright {
+.header ul {
     height: 170px;
     text-align: right;
+    list-style: none;
     padding-top: 30px;
+    padding-bottom: 10px;
 }
 
-#headerright li img {
+.header ul li img {
     width: 15%;
     height: 25px;
     float: right;
+    border: 0px;
+    margin-top: 0px;
 }
 
-#headerright li p {
-    display: inline-block;
-    margin-right: 5px;
-    width: 70%;
+.header ul li p {
+    margin-bottom: 10px;
     font-family: initial;
     color: black;
+    font-size: initial;
 }
 
 address {
@@ -82,7 +86,7 @@ address a {
     text-decoration: underline;
 }
 
-.main-wrap {
+.main {
     width: 100%;
     margin: 0px auto;
     padding: 30px 0px;
@@ -106,30 +110,6 @@ address a {
 
 #rightcontent {
     overflow: hidden;
-}
-
-#hp {
-    font-size: x-large;
-    color: teal;
-    margin: 2px 0px 15px 25px;
-}
-
-#hul {
-    list-style-type: none;
-    margin: 5px 0px 20px 0px;
-    padding-left: 0px;
-}
-
-#hul li {
-    padding-bottom: 10px;
-}
-
-h1 {
-    font-size: 3.5em;
-    margin: 15px 0px 2px 5px;
-    font-weight: bold;
-    color: black;
-    font-family: initial;
 }
 
 #leftcontent h2 {
@@ -190,10 +170,6 @@ h5 {
     font-size: small;
 }
 
-hr {
-    border-width: 2px;
-}
-
 p {
     margin: 0px 0px 0px 45px;
     font-size: initial;
@@ -201,22 +177,27 @@ p {
     font-family: initial;
 }
 
-.pdate {
-    margin-left: 45px;
-    margin-right: 25px;
-    font-size: smaller;
+.start-time {
     display: inline;
-    color: darkslategrey;
+    margin-left: 60px;
+    font-size: smaller;
+    color: darkslategray
 }
 
-.pplace {
+.end-time {
     display: inline;
     font-size: smaller;
+    color: darkslategray
+}
+
+.place {
+    display: inline;
+    font-size: small;
     margin-left: 35px;
     color: darkslategrey;
 }
 
-#ulE {
+#ul-Education1 {
     margin-top: 3px;
     margin-bottom: 0px;
     margin-left: 50px;
@@ -225,7 +206,7 @@ p {
     font-size: initial;
 }
 
-.ulE2 {
+.ul-Education2 {
     margin: 3px 0px 30px 50px;
     margin-left: 50px;
     color: black;
@@ -233,7 +214,7 @@ p {
     font-size: initial;
 }
 
-.ulp {
+.ul-project1 {
     margin-top: 3px;
     margin-left: 50px;
     color: black;
@@ -241,47 +222,47 @@ p {
     font-family: initial;
 }
 
-#p1 {
+#english-level {
     margin: 0px 0px 50px 45px;
     display: inline;
     font-size: medium;
     color: darkslategrey;
 }
 
-#p2 {
+#arabic-level {
     margin: 0px 70px 50px 90px;
     display: inline;
     font-size: medium;
     color: darkslategrey;
 }
 
-.h2l {
+.h2-language {
     margin-left: 25px;
     margin-top: 30px;
     margin-bottom: 10px;
 }
 
-.h4L {
+.h4-language {
     display: inline;
     margin: 0px 50px 0px 45px;
     font-weight: normal;
     font-size: large;
 }
 
-.uls {
+.ul-skills {
     margin-top: 3px;
     list-style: none;
     margin-bottom: 30px;
 }
 
-#workul {
+#ul-work {
     margin: 3px 0px 30px 45px;
     color: black;
     font-family: initial;
     font-size: medium;
 }
 
-.uls li p {
+.ul-skills li p {
     display: inline;
     margin: 5px 0px 0px 15px;
     text-align: right;
@@ -290,33 +271,43 @@ p {
     font-family: initial;
 }
 
-progress {
+meter {
     float: right;
     width: 60%;
 }
 
+meter::-webkit-meter-optimum-value {
+    background:darkslategray;
+}
+
 @media(max-width:992px) {
-    #headerleft {
-        font-size: x-small;
+    .header h1 {
+        font-size: xx-large;
     }
-    #headerleft p {
+    .header p {
         padding-left: 25px;
+        font-size: large;
     }
     #headerdot {
         height: 60px;
         width: 40px;
     }
-    #headermiddel img {
+    .header img {
         width: 80%;
-        margin-left: 20px;
         margin-bottom: 5px;
     }
-    #headerright li img {
+    .header ul {
+        height: auto;
+        text-align: right;
+        padding-top: 30px;
+        padding-bottom: 10px;
+    }
+    .header ul li img {
         width: 15%;
         height: 20px;
     }
-    #headerright li p {
-        width: 50%;
+    .header ul li p {
+        font-size: initial;
     }
     .maindot {
         height: 60px;
@@ -328,7 +319,7 @@ progress {
     #rightcontent h2 {
         font-size: x-large;
     }
-    .h4l {
+    .h4-language {
         font-size: medium;
         margin: 0px 0px 0px 45px;
     }
@@ -341,44 +332,42 @@ progress {
 }
 
 @media(max-width:768px) {
-    #headerleft h1 {
+    .header h1 {
         font-size: x-large;
     }
-    #headerleft p {
+    .header p {
         font-size: large;
         margin-bottom: 0px
     }
-    #headerright {
+    .header img {
+        height: 140px;
+        width: 40%;
+        margin-left: 20px;
+    }
+    .header ul {
         height: auto;
         text-align: left;
         padding-top: 0px;
+        padding-left: 0px;
     }
-    #headerright li img {
-        width: 5%;
+    .header ul li img {
+        width: 10%;
         height: 20px;
         float: left;
+        margin-left: 0px;
     }
-    #headerright li p {
+    .header ul li p {
         margin-left: 35px;
         width: 100%;
         display: block;
         font-size: medium;
     }
-    #headerright address {
+    .header address {
         margin-left: 0px;
     }
-    #headerright address a {
+    .header address a {
         display: inline;
         padding-left: 5px;
-    }
-    #headermiddel {
-        width: 50%;
-        display: block;
-    }
-    #headermiddel img {
-        height: 140px;
-        width: 40%;
-        margin-left: 20px;
     }
     #leftcontent {
         width: 100%;
@@ -391,7 +380,7 @@ progress {
     #rightcontent {
         margin-top: 0px;
     }
-    .ulE2 {
+    .ul-Education2 {
         margin-bottom: 15px;
     }
     #rightcontent .maindot {
