--- a/assignments/Assignment-13/style.css
+++ b/assignments/Assignment-13/style.css
@@ -11,14 +11,18 @@ td {
 }
 
 h1 {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+}
+
+h2 {
+    margin: 10px 0px;
 }
 
 input[type=text],
 input[type=number] {
     width: 40%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 4px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
@@ -27,7 +31,7 @@ input[type=submit] {
     background-color: gray;
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: 4px 0;
     border: none;
     border-radius: 4px;
 }
@@ -41,4 +45,8 @@ div {
     width: 50%;
     border-radius: 5px;
     padding: 10px;
+}
+
+#edit-task {
+    display: none;
 }
